<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.charts.ChartActivity"
    android:id="@+id/drawer_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/main_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorPrimaryLight"
                    app:titleTextColor="@color/white">
                    <TextView
                        android:id="@+id/filtersTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:padding="20dp"
                        android:text="@string/filter"
                        android:textAllCaps="true"/>
                </androidx.appcompat.widget.Toolbar>

                <TextView
                    android:id="@+id/offlineNetwork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:text="Working Offline"
                    android:textAlignment="center"
                    android:visibility="gone"/>


                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/categoryTab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/per_category"/>

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/yearTab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/per_year"/>

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/monthTab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/per_month"/>

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/regressionTab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/predict"/>


                </com.google.android.material.tabs.TabLayout>

            </com.google.android.material.appbar.AppBarLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_behavior="Scroll behaviour" />



    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        android:background="@color/white"
        app:itemTextColor="@color/black" />
</androidx.drawerlayout.widget.DrawerLayout>


