<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.charts.scatter.RegressionFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/regressionLineTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Regression Line: "
                android:textStyle="bold"
                android:textColor="@color/black"/>


            <TextView
                android:id="@+id/regressionLineTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/averageCrimesTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Average No of Crimes: "
                android:textStyle="bold"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/averageCrimesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"/>

        </LinearLayout>

        <TextView
            android:id="@+id/disclaimerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regression_disclaimer"
            android:textColor="@color/black" />

        <com.github.mikephil.charting.charts.CombinedChart
            android:id="@+id/combinedChart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/predictCrimesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/predict_default_text"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

            </LinearLayout>


            <EditText
                android:id="@+id/crimePredictEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Enter a year"
                android:inputType="number"
                android:maxLength="4"
                android:textAlignment="center" />

            <Button
                android:id="@+id/clearButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/clear"
                android:visibility="gone" />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>
