<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.SettingsActivity"
    android:id="@+id/drawer_layout"
    >


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/main_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorPrimaryLight"
                    app:titleTextColor="@color/white">

                    <TextView
                        android:id="@+id/filtersTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:padding="20dp"
                        android:text="@string/filter"
                        android:textAllCaps="true" />
                </androidx.appcompat.widget.Toolbar>

                <TextView
                    android:id="@+id/offlineNetwork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:text="Working Offline"
                    android:textAlignment="center"
                    android:visibility="gone" />

            </com.google.android.material.appbar.AppBarLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/settingsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Settings"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="Clear the Database: "
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/clearDatabaseButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:onClick="onClickClearDatabase"
                        android:text="Clear" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="Clear recent searches: "
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/clearRecentSearchesButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:onClick="onClickClearRecentSearches"
                        android:text="Clear" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="Delete your account"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/deleteAccountButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:onClick="onClickDeleteAccount"
                        android:text="Delete" />

                </LinearLayout>

                <TextView
                    android:id="@+id/aboutTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="About"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/apiTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/api_credit"
                    android:textAlignment="textStart"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/mpChartTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/mp_android_chart_credit"
                    android:textAlignment="textStart"
                    android:textColor="@color/black" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:foregroundGravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/versionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textAlignment="center"
                android:textColor="@color/colorBlue" />

            <ImageView
                android:id="@+id/appIconImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher_round" />
        </LinearLayout>





    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        android:background="@color/white"
        app:itemTextColor="@color/black"/>
</androidx.drawerlayout.widget.DrawerLayout>